--- a/server/package.json
+++ b/server/package.json
@@ -7,25 +7,36 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "tsx src/db/migrate.ts",
+    "db:push": "drizzle-kit push:sqlite", 
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@fastify/cors": "^11.0.1",
-    "better-sqlite3": "^11.9.1",
+    "better-sqlite3": "^11.10.0",
     "dotenv-safe": "^9.1.0",
     "drizzle-orm": "^0.42.0",
-    "fastify": "^5.3.2"
+    "fastify": "^5.3.3"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/dotenv-safe": "^8.1.6",
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.15.29",
+    "drizzle-kit": "^0.31.1",
     "pino-pretty": "^13.0.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "vitest": "^3.1.2"
   },
   "engines": {
     "node": ">=22.0.0"
-  }
+  },
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
